insta logo change

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,9 @@
                                 <a href="about-me.html" class="nav-link title-font">About Me</a>
                                 <a href="contact-me.html" class="nav-link title-font">Contact Me</a>
                                 <a href="portfolio.html" class=" nav-link title-font current-page-port">Portfolio</a>
-                                <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="nav-link title-font">Instagram</a>
+                                <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="nav-link title-font">
+                                    <img src="./resources/images/insta-logo-white.png" alt="Instagram Logo">
+                                </a>
                             </nav>
                         
 
@@ -78,15 +80,15 @@
                         <div class="portfolio-block-container">
                             <div class="skill-container">
                                 <a href="#body">
-                                    <h3 class="skill-title web-head-title">Web Development</h3>
-                                </a>
-                                <p class="skill-text">Having started my coding journey in 2018, I now focus primarily on front-end technologies; with a continual goal of becoming a full-stack developer. </p>
-                            </div>
-                            <div class="skill-container">
-                                <a href="#body">
                                     <h3 class="skill-title photo-head-title">Photography</h3>
                                 </a>
                                 <p class="skill-text">My interests in photography stemmed from my love of extreme sports. I grew to love all aspects of photography, with a passion for shooting sport and portrait/lifestyle.</p>
+                            </div>
+                            <div class="skill-container">
+                                <a href="#body">
+                                    <h3 class="skill-title web-head-title">Web Development</h3>
+                                </a>
+                                <p class="skill-text">Having started my coding journey in 2018, I now focus primarily on front-end technologies; with a continual goal of becoming a full-stack developer. </p>
                             </div>
                         </div>
                     </div>
@@ -101,8 +103,8 @@
     <div id="body" class="body-main center">
         <div class=" center portfolio-body-content-container">
             <div class="portfolio-headings center">
-                <button class="current page-title title-font web-title">Web <span>Development</span></button>
-                <button class="page-title title-font photo-title">Photography</button> 
+                <button class="current page-title title-font photo-title">Photography</button>
+                <button class="page-title title-font web-title">Web <span>Development</span></button> 
             </div>
             <div class="portfolio-photo-body slide-container">
 
