--- a/portfolio/sport.html
+++ b/portfolio/sport.html
@@ -43,7 +43,9 @@
                 <a href="../about-me.html" class="nav-link title-font">About Me</a>
                 <a href="../contact-me.html" class="nav-link title-font">Contact Me</a>
                 <a href="../portfolio.html" class="nav-link title-font">Portfolio</a>
-                <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="nav-link title-font">Instagram</a>
+                <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="nav-link title-font">
+                    <img src="../resources/images/insta-link.png" alt="Instagram Logo">
+                </a>
             </nav>
                         
 
@@ -75,7 +77,7 @@
     <div class="body-album center">
         <div class="album-page-heading">
             <h3 class="page-title title-font">Sport</h3>
-            <a href="../portfolio.html">⬅ Back</a>
+            <a href="../portfolio.html#body">⬅ Back</a>
         </div>
     </div>
 
@@ -92,6 +94,7 @@
             <div class="row">
                 <img src="./portfolio-album-images/sport/sport6.jpg" alt="Photo of someone snowboarding" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport5.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="../articles/5-austria-feb2020/images/em-frontlip.jpg" alt="Photo of snowboarding" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport8.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport7.jpg" alt="Photo of someone snowboarding" loading="lazy">
             </div>
@@ -106,6 +109,8 @@
                 <img src="./portfolio-album-images/sport/sport14.jpg" alt="Photo of someone snowboarding" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport15.jpg" alt="Photo of motorsport" loading="lazy">    
                 <img src="./portfolio-album-images/sport/sport16.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="../articles/5-austria-feb2020/images/jack-frontboard.jpg" alt="Photo of snowboarding" loading="lazy">
+
             </div>     
         </div>
     </div>
