--- a/portfolio/hospitality.html
+++ b/portfolio/hospitality.html
@@ -43,7 +43,9 @@
                 <a href="../about-me.html" class="nav-link title-font">About Me</a>
                 <a href="../contact-me.html" class="nav-link title-font">Contact Me</a>
                 <a href="../portfolio.html" class="nav-link title-font">Portfolio</a>
-                <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="nav-link title-font">Instagram</a>
+                <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="nav-link title-font">
+                    <img src="../resources/images/insta-link.png" alt="Instagram Logo">
+                </a>
             </nav>
                         
 
@@ -75,7 +77,7 @@
     <div class="body-album center">
         <div class="album-page-heading">
             <h3 class="page-title title-font">Hospitality</h3>
-            <a href="../portfolio.html">⬅ Back</a>
+            <a href="../portfolio.html#body">⬅ Back</a>
         </div>
     </div>
 
@@ -106,6 +108,7 @@
             </div>   
             <div class="row"> 
                 <img src="./portfolio-album-images/hospitality/hospitality4.jpg" alt="Picture of drinks on a bar." loading="lazy">
+                <img src="./portfolio-album-images/hospitality/hospitality21.jpg" alt="Picture of drinks on a bar." loading="lazy">
                 <img src="./portfolio-album-images/hospitality/hospitality12.jpg" alt="Picture of drinks on a bar." loading="lazy">
                 <img src="./portfolio-album-images/hospitality/hospitality16.jpg" alt="Picture of drinks on a bar." loading="lazy">
                 <img src="./portfolio-album-images/hospitality/hospitality8.jpg" alt="Picture of drinks on a bar." loading="lazy">
