--- a/portfolio/sport.html
+++ b/portfolio/sport.html
@@ -90,6 +90,7 @@
                 <img src="./portfolio-album-images/sport/sport3.jpg" alt="Photo of motorsport" loading="lazy">       
                 <img src="./portfolio-album-images/sport/sport2.jpg" alt="Photo of someone skiing" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport4.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport17.jpg" alt="Photo of motorsport" loading="lazy">
             </div>
             <div class="row">
                 <img src="./portfolio-album-images/sport/sport6.jpg" alt="Photo of someone snowboarding" loading="lazy">
@@ -103,6 +104,7 @@
                 <img src="./portfolio-album-images/sport/sport10.jpg" alt="Photo of someone snowboarding" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport11.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport12.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport18.jpg" alt="Photo of motorsport" loading="lazy">
             </div>
             <div class="row">
                 <img src="./portfolio-album-images/sport/sport13.jpg" alt="Photo of someone snowboarding" loading="lazy">
