--- a/index.html
+++ b/index.html
@@ -189,16 +189,8 @@
 
    <!-- Footer -->
 
-    <footer class="footer">
-        <div class="footerlinks">
-            <a href="index.html" class="footerlink">Home</a>
-            <a href="about-me.html" class="footerlink">About Me</a>
-            <a href="contact-me.html" class="footerlink">Contact Me</a>
-            <a href="portfolio.html" class="footerlink">Portfolio</a>
-            <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="footerlink insta">Instagram</a>
-        </div>
-
-        <p class="center copyright">&copy; James Waterman, 2020</p> 
+    <footer id="footer" class="footer">
+         
     </footer>
 
             
