--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
 
     <div id="body" class="body-main center">
         <div class=" center portfolio-body-content-container">
-            <div class="portfolio-headings center">
+            <div id="portfolioSwitch" class="portfolio-headings center">
                 <button class="current page-title title-font photo-title">Photography</button>
                 <button class="page-title title-font web-title">Web <span>Development</span></button> 
             </div>
@@ -266,17 +266,9 @@
         </div>
     
 
-        <footer class="footer">
-        <div class="footerlinks">
-            <a href="index.html" class="footerlink">Home</a>
-            <a href="about-me.html" class="footerlink">About Me</a>
-            <a href="contact-me.html" class="footerlink">Contact Me</a>
-            <a href="portfolio.html" class="footerlink">Portfolio</a>
-            <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="footerlink insta">Instagram</a>
-        </div>
-
-        <p class="center copyright">&copy; James Waterman, 2020</p> 
-    </footer>
+        <footer id="footer" class="footer">
+         
+        </footer>
     </div>
 
     </div>
