--- a/portfolio/hospitality.html
+++ b/portfolio/hospitality.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head id="headPortfolio">
     <title>Hospitality | Portfolio | James Waterman</title>
     <link href="../resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./portfolio-resources/portfolio-css/portfolio.css" type="text/css" rel="stylesheet">
     <link href="../resources/css/header-footer.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Martel:400,700|Nunito+Sans:300,400,600,700,800|Roboto&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="../resources/images/blog-favicon.ico">
     <meta name="viewport" content="width=device-width">
 </head>
 
