--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head id="head">
     <title>James Waterman</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style-my-blog.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/header-footer.css" type="text/css" rel="stylesheet">
     <meta name="description" content="A photography blog following my travels and adventures. A collection of all my favorite Pictures.">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Nunito+Sans:ital,wght@0,300,400,600,700,800|Roboto" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="./resources/images/blog-favicon.ico">
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
