redesign and update portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,16 +38,16 @@
                         <div class="name-top">
                             <h1 class="main-title title-font"><a href="index.html" class="grey">James Waterman</a></h1>
 
-                            <h2 class="main-sub-heading title-font web-sub-heading"><a href="index.html" class="grey">Travel | Photo | Web</a></h2>
+                            <!-- <h2 class="main-sub-heading title-font web-sub-heading"><a href="index.html" class="grey">Travel | Photo | Web</a></h2>
 
-                            <h2 class="main-sub-heading title-font mobile-sub-heading grey"><a href="index.html" class="grey">Blog</a> | <a href="portfolio.html" class="grey">Portfolio</a></h2>
+                            <h2 class="main-sub-heading title-font mobile-sub-heading grey"><a href="index.html" class="grey">Blog</a> | <a href="portfolio.html" class="grey">Portfolio</a></h2> -->
                         </div>
 
                             <nav class="link-position">
                                 <a href="index.html" class="nav-link title-font">Home</a>
-                                <a href="about-me.html" class="nav-link title-font">About Me</a>
-                                <a href="contact-me.html" class="nav-link title-font">Contact Me</a>
-                                <a href="portfolio.html" class=" nav-link title-font current-page-port">Portfolio</a>
+                                <a href="blog.html" class="nav-link title-font">Blog</a>
+<!--                                 <a href="contact-me.html" class="nav-link title-font">Contact Me</a>
+ -->                                <a href="portfolio.html" class=" nav-link title-font current-page-port">Portfolio</a>
                                 <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="nav-link title-font">
                                     <img src="./resources/images/insta-logo-white.png" alt="Instagram Logo">
                                 </a>
@@ -65,8 +65,7 @@
                             <div class="dropdown-content">
                                 <nav>
                                     <a href="index.html">Home</a>
-                                    <a href="about-me.html">About Me</a>
-                                    <a href="contact-me.html">Contact Me</a>
+                                    <a href="blog.html">Blog</a>
                                     <a href="portfolio.html">Portfolio</a>
                                     <a href="https://www.instagram.com/james_waterman6/" target="_blank">Instagram</a>
                                 </nav>
