--- a/portfolio/portrait.html
+++ b/portfolio/portrait.html
@@ -45,28 +45,42 @@
         <div class="album-photo-container">
             <div class="row">
                 <img src="./portfolio-album-images/portraits/portrait2.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait27.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait20.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait31.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait35.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait1.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait39.jpg" alt="Portrait of person" loading="lazy">    
                 <img src="./portfolio-album-images/portraits/portrait25.jpg" alt="Portrait of person" loading="lazy"> 
                 <img src="./portfolio-album-images/portraits/portrait10.5.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait40.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait8.jpg" alt="Portrait of person" loading="lazy">  
-                <img src="./portfolio-album-images/portraits/portrait10.jpg" alt="Portrait of person" loading="lazy">     
+                <img src="./portfolio-album-images/portraits/portrait41.jpg" alt="Portrait of person" loading="lazy">
+                <!-- <img src="./portfolio-album-images/portraits/portrait10.jpg" alt="Portrait of person" loading="lazy"> --> 
             </div>    
             <div class="row">
                 <img src="./portfolio-album-images/portraits/portrait5.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait17.jpg" alt="Portrait of person" loading="lazy"> 
+                <img src="./portfolio-album-images/portraits/portrait43.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait21.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait15.jpg" alt="Portrait of person" loading="lazy"> 
+                <img src="./portfolio-album-images/portraits/portrait28.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait32.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait13.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait12.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait36.jpg" alt="Portrait of person" loading="lazy">
                 <img src="../articles/5-austria-feb2020/images/em-portrait.jpg" alt="Portrait of person" loading="lazy">
             </div>    
             <div class="row">
                 <img src="./portfolio-album-images/portraits/portrait16.jpg" alt="Portrait of person" loading="lazy"> 
+                <img src="./portfolio-album-images/portraits/portrait44.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait9.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait33.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait29.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait22.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait26.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait6.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait37.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait14.jpg" alt="Portrait of person" loading="lazy">   
                 <!-- <img src="./portfolio-album-images/portraits/portrait19.jpg" alt="Portrait of person" loading="lazy"> -->
             </div>    
@@ -74,9 +88,13 @@
                 <img src="./portfolio-album-images/portraits/portrait7.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait24.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portraitm.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait34.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait11.jpg" alt="Portrait of person" loading="lazy"> 
+                <img src="./portfolio-album-images/portraits/portrait42.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait18.jpg" alt="Portrait of person" loading="lazy"> 
+                <img src="./portfolio-album-images/portraits/portrait38.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait4.jpg" alt="Portrait of person" loading="lazy">
+                <img src="./portfolio-album-images/portraits/portrait30.jpg" alt="Portrait of person" loading="lazy">
                 <img src="./portfolio-album-images/portraits/portrait3.jpg" alt="Portrait of person" loading="lazy"> 
             </div>           
         </div>
