--- a/portfolio/sport.html
+++ b/portfolio/sport.html
@@ -45,32 +45,52 @@
         <div class="album-photo-container">
             <div class="row">
                 <img src="./portfolio-album-images/sport/sport1.jpg" alt="Photo of someone snowboarding" loading="lazy"> 
+                <img src="./portfolio-album-images/sport/sport28.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport3.jpg" alt="Photo of motorsport" loading="lazy">       
+                <img src="./portfolio-album-images/sport/sport24.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport17.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport20.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport36.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport32.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport37.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport2.jpg" alt="Photo of someone skiing" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport4.jpg" alt="Photo of someone snowboarding" loading="lazy">
-                <img src="./portfolio-album-images/sport/sport17.jpg" alt="Photo of motorsport" loading="lazy">
             </div>
             <div class="row">
+                <img src="./portfolio-album-images/sport/sport21.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport6.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport25.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport5.jpg" alt="Photo of someone snowboarding" loading="lazy">
-                <img src="../articles/5-austria-feb2020/images/em-frontlip.jpg" alt="Photo of snowboarding" loading="lazy">
-                <img src="./portfolio-album-images/sport/sport8.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport39.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport7.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport33.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport19.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="../articles/5-austria-feb2020/images/em-frontlip.jpg" alt="Photo of snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport29.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport8.jpg" alt="Photo of motorsport" loading="lazy">
             </div>
             <div class="row">
                 <img src="./portfolio-album-images/sport/sport9.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport34.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport22.jpg" alt="Photo of motorsport" loading="lazy">
+                r<img src="./portfolio-album-images/sport/sport12.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport26.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport10.jpg" alt="Photo of someone snowboarding" loading="lazy">
-                <img src="./portfolio-album-images/sport/sport11.jpg" alt="Photo of motorsport" loading="lazy">
-                <img src="./portfolio-album-images/sport/sport12.jpg" alt="Photo of someone snowboarding" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport18.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport30.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport11.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport38.jpg" alt="Photo of motorsport" loading="lazy">
             </div>
             <div class="row">
                 <img src="./portfolio-album-images/sport/sport13.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport31.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport23.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport35.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport14.jpg" alt="Photo of someone snowboarding" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport15.jpg" alt="Photo of motorsport" loading="lazy">    
+                <img src="./portfolio-album-images/sport/sport27.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport16.jpg" alt="Photo of someone snowboarding" loading="lazy">
                 <img src="../articles/5-austria-feb2020/images/jack-frontboard.jpg" alt="Photo of snowboarding" loading="lazy">
-
             </div>     
         </div>
     </div>
