--- a/portfolio/sport.html
+++ b/portfolio/sport.html
@@ -73,7 +73,7 @@
                 <img src="./portfolio-album-images/sport/sport9.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport34.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport22.jpg" alt="Photo of motorsport" loading="lazy">
-                r<img src="./portfolio-album-images/sport/sport12.jpg" alt="Photo of someone snowboarding" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport12.jpg" alt="Photo of someone snowboarding" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport26.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport10.jpg" alt="Photo of someone snowboarding" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport18.jpg" alt="Photo of motorsport" loading="lazy">
@@ -84,8 +84,8 @@
             <div class="row">
                 <img src="./portfolio-album-images/sport/sport13.jpg" alt="Photo of someone snowboarding" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport31.jpg" alt="Photo of motorsport" loading="lazy">
-                <img src="./portfolio-album-images/sport/sport23.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport35.jpg" alt="Photo of motorsport" loading="lazy">
+                <img src="./portfolio-album-images/sport/sport23.jpg" alt="Photo of motorsport" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport14.jpg" alt="Photo of someone snowboarding" loading="lazy">
                 <img src="./portfolio-album-images/sport/sport15.jpg" alt="Photo of motorsport" loading="lazy">    
                 <img src="./portfolio-album-images/sport/sport27.jpg" alt="Photo of motorsport" loading="lazy">
