--- a/blog.html
+++ b/blog.html
@@ -84,6 +84,18 @@
             
             <section id="blog_entries" class="blog-entries center">  
 
+                <!-- Italy May 2022 -->
+
+                <a href="./articles/7-italy-may2022/italy-may2022.html">
+                    <div class="entry center">
+                        <h4 class="blog-album-title"><span class="date">May2022</span><br>Italy</h4>
+                            
+                        <div class="zoom-container">
+                            <img src="./resources/article-images/7-flowers.jpg" alt="waterfall" class="blog-link-img">
+                        </div>
+                     </div> 
+                </a>
+
                 <!-- Austria Febuary 2020 -->
 
                 <a href="./articles/5-austria-feb2020/austria-feb2020.html">
