--- a/blog.html
+++ b/blog.html
@@ -145,6 +145,18 @@
                      </div> 
                 </a>
 
+                <!-- England August 2021 -->
+
+                <a href="./articles/5.1-england-aug2021/england-aug2021.html">
+                    <div class="entry center">
+                        <h4 class="blog-album-title"><span class="date">August 2021</span><br>England</h4>
+                            
+                        <div class="zoom-container">
+                            <img src="./resources/article-images/5.1-lake.jpg" alt="waterfall" class="blog-link-img">
+                        </div>
+                     </div> 
+                </a>
+
                 <!-- Austria Febuary 2020 -->
 
                 <a href="./articles/5-austria-feb2020/austria-feb2020.html">
