update web portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -167,15 +167,24 @@
 
 
 
-                <p class="web-text web-dev-width center">In 2018 I had just finished college and found myself rather lost with what to do next. Whilst away travelling I decided I wanted a website where I could share my photography. With a website being the goal I decided I would learn to make one myself as time is something I had plenty of.<br><br>
+                <p class="web-text web-dev-width center">In 2018 with the desire for a new website, I embarked on my coding journey. With my primary focus being front-end development, I expanded my knowledge in HTML, CSS  and JavaScript to help me achieve my goals, alongside looking into how to create beautiful and practical designs.<br><br>
 
-                After learning the basics from various websites, I decided to use platforms such as Codecademy to further my knowledge and provide myself with a solid foundation to further progress on my own. The more I worked on projects, the more my eyes were opened to what could be achieved through coding; sparking my enthusiasm to continue improving my work.<br><br>
+                I have applied this knowledge to various projects and am constantly expanding my skillset by working with numerous frameworks and languages to help me better my work, supplementing my Learning. <br><br>
 
-                Since then I have worked with various languages and frameworks, such as HTML5, CSS3, JavaScript, Sass, React.js, Express.js, Node.js and SQL.</p>
+                I have since worked with various languages and frameworks, such as Sass, React.js, Express.js, Node.js and SQL.</p>
 
                 <h3 class="page-title title-font web-body-title web-dev-width center">Projects</h3>
 
                 <div class="web-dev-width center">
+
+                    <div class="project-container">
+                        <div class="project-text">
+                            <h4 class="project-title title-font center">Anne Ringrose Counselling</h4>
+
+                            <p class="web-text"><a href="https://anneringrosecounselling.co.uk/" target="_blank">Anne Ringrose Counselling</a> is a website I produced for a client. They were looking for a static site to deliver information about their services, alongside their contact information. I designed a simple yet bold landing screen with all the information users would be looking for, with the subsequent pages following a similar user-friendly design. I've gone for a simple colour scheme to make users feel calm and welcome, using mainly purple as a base colour.</p>
+                        </div>
+                        <img src="./portfolio/portfolio-resources/portfolio-images/ar-counselling.png" alt="Ingredients Calculator" class="project-img">
+                    </div>
 
                     <div class="project-container">
                         <div class="project-text">
@@ -196,7 +205,7 @@
                         <img src="./portfolio/portfolio-resources/portfolio-images/ingredients-calculator.png" alt="Ingredients Calculator" class="project-img">
                     </div>
                     
-                    <div class="project-container bg-color">
+                    <!-- <div class="project-container bg-color">
                         <div class="project-text">
                             <h4 class="project-title title-font center">Jamming</h4>
 
@@ -213,7 +222,7 @@
                             <p class="web-text"><a href="https://github.com/jameswaterman/Jamming" target="_blank">GitHub</a></p>
                         </div>
                         <img src="./portfolio/portfolio-resources/portfolio-images/jamming.png" alt="Business website template" class="project-img">
-                    </div>
+                    </div> -->
 
                     <div class="project-container bg-color">
                         <div class="project-text">
@@ -224,7 +233,7 @@
                     </div>
 
 
-                    <div class="project-container bg-color">
+                  <!--   <div class="project-container bg-color">
                         <div class="project-text">
                             <h4 class="project-title title-font center">Ravenous</h4>
 
@@ -251,7 +260,7 @@
                         <img src="./portfolio/portfolio-resources/portfolio-images/colmar.png" alt="Business website template" class="project-img">
                     </div>
                     
-                </div>
+                </div> -->
 
                 <h3 class="page-title web-dev-width title-font web-body-title center">GitHub</h3>
 
