update me photo home.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
             <section class="about-me-container center">
                 <div class="center about-me">
-                    <img src="resources/images/me.jpg" class="about-me-img">
+                    <img src="resources/images/me2-1.jpg" class="about-me-img">
                     <p class="intro"><span class="title-font intro-opening">Hey! I'm a Photographer based on the south coast of the UK.
                     Although my main focus is portraiture, sports and lifestyle photography, I love to push my abilities and try new styles where possible.</span><br><br>
 
