update back button

--- a/portfolio/landscape.html
+++ b/portfolio/landscape.html
@@ -36,7 +36,7 @@
     <div class="body-album center">
         <div class="album-page-heading">
             <h3 class="page-title title-font">Landscape</h3>
-            <a href="../portfolio.html#body">⬅ Back</a>
+            <a href="../portfolio.html#body"><span class="back-arrow"><</span> Back</a>
         </div>
     </div>
 
