--- a/portfolio/hospitality.html
+++ b/portfolio/hospitality.html
@@ -34,7 +34,7 @@
     <div class="body-album center">
         <div class="album-page-heading">
             <h3 class="page-title title-font">Hospitality</h3>
-            <a href="../portfolio.html#body">⬅ Back</a>
+            <a href="../portfolio.html#body"><span class="back-arrow"><</span> Back</a>
         </div>
     </div>
 
