--- a/portfolio/sport.html
+++ b/portfolio/sport.html
@@ -35,7 +35,7 @@
     <div class="body-album center">
         <div class="album-page-heading">
             <h3 class="page-title title-font">Sport</h3>
-            <a href="../portfolio.html#body">⬅ Back</a>
+            <a href="../portfolio.html#body"><span class="back-arrow"><</span> Back</a>
         </div>
     </div>
 
