greece album complete

--- a/blog.html
+++ b/blog.html
@@ -84,6 +84,18 @@
             
             <section id="blog_entries" class="blog-entries center">
 
+                <!-- Greece september 2022 -->
+
+                <a href="./articles/9-greece-sep2022/greece-sep2022.html">
+                    <div class="entry center">
+                        <h4 class="blog-album-title"><span class="date">September 2022</span><br>Greece</h4>
+                            
+                        <div class="zoom-container">
+                            <img src="./resources/article-images/11-sea.jpg" alt="waterfall" class="blog-link-img">
+                        </div>
+                     </div> 
+                </a>
+
                 <!-- Portugal June 2022 -->
 
                 <a href="./articles/8-portugal-jun2022/portugal-jun22.html">
