blog button glitch patch

--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
             
             <nav class="link-position">
                 <a href="index.html" class="nav-link title-font">Home</a>
-                <a href="about-me.html" class="current-page nav-link title-font">Blog</a>
+                <a href="blog.html" class="current-page nav-link title-font">Blog</a>
                 <a href="portfolio.html" class="nav-link title-font">Portfolio</a>
                 <a href="https://www.instagram.com/james_waterman6/" target="_blank" class="nav-link title-font">
                     <img src="./resources/images/insta-link.png">
