portfolio update banff

--- a/blog.html
+++ b/blog.html
@@ -84,6 +84,18 @@
             
             <section id="blog_entries" class="blog-entries center">
 
+                <!-- Canada winter 2022/2023 -->
+
+                <a href="./articles/10-canada-winter22-23/canada-winter22-23.html">
+                    <div class="entry center">
+                        <h4 class="blog-album-title"><span class="date">November 2022-June 2023</span><br>Canada</h4>
+                            
+                        <div class="zoom-container">
+                            <img src="./resources/article-images/12-northern-lights.jpg" alt="waterfall" class="blog-link-img">
+                        </div>
+                     </div> 
+                </a>
+
                 <!-- Greece september 2022 -->
 
                 <a href="./articles/9-greece-sep2022/greece-sep2022.html">
