--- a/portfolio/pets.html
+++ b/portfolio/pets.html
@@ -55,21 +55,22 @@
                 <img src="./portfolio-album-images/pets/pets6.jpg" alt="Picture of a deer" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets17.jpg" alt="Picture of a dog" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets21.jpg" alt="Picture of a dog" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets12.jpg" alt="Picture of a cat" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets5.jpg" alt="Picture of a bird" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets8.jpg" alt="Picture of a cat" loading="lazy">
             </div>
             <div class="row">
                 <img src="./portfolio-album-images/pets/pets22.jpg" alt="Picture of a dog" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets10.jpg" alt="Picture of a flower" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets9.jpg" alt="Picture of a dog" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets4.jpg" alt="Picture of a pony" loading="lazy">
-                <img src="./portfolio-album-images/pets/pets12.jpg" alt="Picture of a cat" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets16.jpg" alt="Picture of a deer" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets24.jpg" alt="Picture of a deer" loading="lazy">
             </div>
             <div class="row">
                 <img src="./portfolio-album-images/pets/pets13.jpg" alt="Picture of a dog" loading="lazy"> 
                 <img src="./portfolio-album-images/pets/pets14.jpg" alt="Picture of a bird" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets15.jpg" alt="Picture of a dog" loading="lazy">
+                <img src="./portfolio-album-images/pets/pets9.jpg" alt="Picture of a dog" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets23.jpg" alt="Picture of a dog" loading="lazy">
                 <img src="./portfolio-album-images/pets/pets7.jpg" alt="Picture of a bird" loading="lazy">
             </div>       
